--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,214 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      {{isModalUpdate}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" *ngIf="enabled">
+  <ion-grid>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-row>
+      <ion-col size="10">
+        <ion-searchbar placeholder="Buscar por nombre" #ionBusqueda>
+        </ion-searchbar>
+      </ion-col>
+      <ion-col size="2">
+        <ion-fab>
+          <ion-fab-button 
+            (click)="setOpen(true, false)"
+            expand="block">
+            <ion-icon name="add"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+      </ion-col>
+      <!--
+        IdUsuarioOK: string;
+        IdUsuarioBK: string;    Se va a generar 
+        Nombres: string;      
+        Apellidos: string;
+        Hotel: string;
+        Rol: string;
+        Clave: string;
+        CorreoEle: string;
+        Celular: string;
+      -->
+
+    </ion-row>
+
+  <ion-row>
+      <ion-col size="12">
+        <ion-list>
+          <div class="contenedor-gerentes" id="contenedor-gerentes-titulo">
+            <ion-grid fixed>
+              <ion-row>
+                <ion-col size="2">
+                  <p>Estatus</p>
+                </ion-col>
+                <ion-col size="2">
+                  <p>Usuario</p>
+                </ion-col>
+                <ion-col size="2">
+                  <p>Hotel</p>
+                </ion-col>
+                <ion-col size="2">
+                  <p>Nombre</p>
+                </ion-col>
+                <ion-col size="2">
+                  <p>Apellidos</p>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </div>
+          <ion-item-sliding *ngFor="let g of gerentes">
+            <ion-item>
+              <div class="contenedor-gerentes">
+                <ion-grid fixed>
+                  <ion-row>
+                    <ion-col size="2">
+                      <ion-chip [color]="getIconActivo(g.Activo).iconColor" outline="true">
+                        <ion-icon [name]="getIconActivo(g.Activo).iconName"></ion-icon>
+                        <ion-label>{{getIconActivo(g.Activo).msj}}</ion-label>
+                      </ion-chip>
+                    </ion-col>
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{g.IdUsuarioBK}}</p>
+                    </ion-col>
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{g.Hotel}}</p>
+                    </ion-col>
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{g.Nombres}}</p>
+                    </ion-col>
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{g.Apellidos}}</p>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </div>
+            </ion-item>
+            <!--(ionSwipe)=""-->
+            <ion-item-options 
+              side="start"
+              expandable>
+              <ion-item-option *ngIf="!g.Activo" color="success" (click)="updateUsrActivo(g,true)">
+                <ion-icon name="checkmark"></ion-icon>
+              </ion-item-option>
+              <ion-item-option *ngIf="g.Activo" color="danger" (click)="updateUsrActivo(g,false)">
+                <ion-icon name="close"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
+
+            <ion-item-options
+              side="end"
+              expandable>
+             <ion-item-option 
+                color="danger"
+                (click)="deleteUser(g)">
+                <ion-icon name="trash"></ion-icon>
+              </ion-item-option>
+              <ion-item-option 
+                color="primary"
+                (click)="setUpdateOpen(g)">
+                <ion-icon name="create"></ion-icon>
+              </ion-item-option>
+            </ion-item-options>
+
+          </ion-item-sliding>
+        </ion-list>
+      </ion-col>
+    </ion-row>  
+
+  </ion-grid>
+
+  <ion-modal [isOpen]="isModalOpen" [backdropDismiss]="false">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title *ngIf="!isModalUpdate">Agregar Usuario</ion-title>
+          <ion-title *ngIf="isModalUpdate">Modificar {{usrToUpdate?.IdUsuarioBK}}</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="setClose()">Close</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="12">
+
+              <form [formGroup]="formUsuario">
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Nombres" type="text" placeholder="NOMBRE"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Nombres']">
+                    <div class="error-message" *ngIf="formUsuario.get('Nombres')?.hasError(val.type)&&formUsuario.get('Nombres')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Apellidos" type="text" placeholder="APELLIDOS"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Apellidos']">
+                    <div class="error-message" *ngIf="formUsuario.get('Apellidos')?.hasError(val.type)&&formUsuario.get('Apellidos')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Hotel" type="text" placeholder="HOTEL"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Hotel']">
+                    <div class="error-message" *ngIf="formUsuario.get('Hotel')?.hasError(val.type)&&formUsuario.get('Hotel')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="CorreoEle" type="email" placeholder="CORREO ELECTRONICO"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['CorreoEle']">
+                    <div class="error-message" *ngIf="formUsuario.get('CorreoEle')?.hasError(val.type)&&formUsuario.get('CorreoEle')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+                
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Celular" type="text" placeholder="CELULAR"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Celular']">
+                    <div class="error-message" *ngIf="formUsuario.get('Celular')?.hasError(val.type)&&formUsuario.get('Celular')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+              </form>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <ion-button *ngIf="!isModalUpdate" color="success" shape="round" expand="full" (click)="addUser()" [disabled]="!formUsuario.valid">
+                <div>Agregar Usuario</div>
+              </ion-button>
+              <ion-button *ngIf="isModalUpdate" color="primary" shape="round" expand="full" (click)="updateAllUsr()"  [disabled]="!formUsuario.valid">
+                <div>Modificar Usuario</div>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
 </ion-content>
