--- a/src/app/home-gerente/home-gerente.page.html
+++ b/src/app/home-gerente/home-gerente.page.html
@@ -1,13 +1,262 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>home-gerente</ion-title>
+    <ion-title>
+      {{admin?.Nombres}} {{admin?.Apellidos}}
+    </ion-title>
   </ion-toolbar>
 </ion-header>
+<!--*ngIf="enabled"-->
+<ion-content [fullscreen]="true" >
+  <ion-grid>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">home-gerente</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-row>
+      <ion-col size="10">
+        <!--(ionChange)="filterGerentes($event)"-->
+        <ion-searchbar placeholder="Buscar por nombre"  #ionBusqueda>
+        </ion-searchbar>
+      </ion-col>
+      <ion-col size="2">
+        <ion-fab>
+          <!--(click)="setOpen(true, false)"-->
+          <ion-fab-button 
+            
+            expand="block">
+            <ion-icon name="add"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+      </ion-col>
+      <!--
+        IdUsuarioOK: string;
+        IdUsuarioBK: string;    Se va a generar 
+        Nombres: string;      
+        Apellidos: string;
+        Hotel: string;
+        Rol: string;
+        Clave: string;
+        CorreoEle: string;
+        Celular: string;
+      -->
+
+    </ion-row>
+
+  <ion-row>
+      <ion-col size="12">
+        <ion-list>
+          <div class="contenedor-gerentes" id="contenedor-gerentes-titulo">
+            <ion-grid fixed>
+              <ion-row>
+                <ion-col size="2">
+                  <p>Nombre</p>
+                </ion-col>
+                <ion-col size="2">
+                  <p>Apellidos</p>
+                </ion-col>
+                <ion-col size="2">
+                  <p>Celular</p>
+                </ion-col>
+                <ion-col size="2">
+                  <p>Correo</p>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </div>
+          <!--*ngFor="let g of fGerentes"-->
+          <ion-item-sliding *ngFor="let e of empleados">
+            <ion-item>
+              <div class="contenedor-gerentes">
+                <ion-grid fixed>
+                  <ion-row>
+                    
+                  <!--
+                      <ion-chip [color]="getIconActivo(g.Activo).iconColor" outline="true">
+                        <ion-icon [name]="getIconActivo(g.Activo).iconName"></ion-icon>
+                        <ion-label>{{getIconActivo(g.Activo).msj}}</ion-label>
+                      </ion-chip>
+                    -->
+                    
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{e.Nombres}}</p>
+                    </ion-col>
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{e.Apellidos}}</p>
+                    </ion-col>
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{e.Celular}}</p>
+                    </ion-col>
+                    <ion-col size="2">
+                      <p class="contenedor-gerentes-contenido">{{e.CorreoEle}}</p>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </div>
+            </ion-item>
+            <!--(ionSwipe)=""-->
+            <ion-item-options 
+              side="start"
+              expandable>
+            <!--
+              <ion-item-option *ngIf="!g.Activo" color="success" (click)="updateUsrActivo(g,true)">
+                <ion-icon name="checkmark"></ion-icon>
+              </ion-item-option>
+              <ion-item-option *ngIf="g.Activo" color="danger" (click)="updateUsrActivo(g,false)">
+                <ion-icon name="close"></ion-icon>
+              </ion-item-option>
+            
+            </ion-item-options>
+
+            <ion-item-options
+              side="end"
+              expandable>
+             <ion-item-option 
+                color="danger"
+                (click)="deleteUser(g)">
+                <ion-icon name="trash"></ion-icon>
+              </ion-item-option>
+              <ion-item-option 
+                color="primary"
+                (click)="setUpdateOpen(g)">
+                <ion-icon name="create"></ion-icon>
+              </ion-item-option>
+              -->
+            </ion-item-options>
+
+          </ion-item-sliding>
+        </ion-list>
+      </ion-col>
+    </ion-row>  
+
+  </ion-grid>
+<!--
+  <ion-modal [isOpen]="isModalOpen" [backdropDismiss]="false">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title *ngIf="!isModalUpdate">Agregar Usuario</ion-title>
+          <ion-title *ngIf="isModalUpdate">Modificar {{usrToUpdate?.IdUsuarioBK}}</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="setClose()">Close</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="12">
+
+              <form [formGroup]="formUsuario">
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Nombres" type="text" placeholder="NOMBRE"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Nombres']">
+                    <div class="error-message" *ngIf="formUsuario.get('Nombres')?.hasError(val.type)&&formUsuario.get('Nombres')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Apellidos" type="text" placeholder="APELLIDOS"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Apellidos']">
+                    <div class="error-message" *ngIf="formUsuario.get('Apellidos')?.hasError(val.type)&&formUsuario.get('Apellidos')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Hotel" type="text" placeholder="HOTEL"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Hotel']">
+                    <div class="error-message" *ngIf="formUsuario.get('Hotel')?.hasError(val.type)&&formUsuario.get('Hotel')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="CorreoEle" type="email" placeholder="CORREO ELECTRONICO"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['CorreoEle']">
+                    <div class="error-message" *ngIf="formUsuario.get('CorreoEle')?.hasError(val.type)&&formUsuario.get('CorreoEle')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+                
+                <ion-col size="12">
+                  <ion-item>
+                    <ion-input formControlName="Celular" type="text" placeholder="CELULAR"></ion-input>
+                  </ion-item>
+                  <ng-container *ngFor="let val of validationMessages['Celular']">
+                    <div class="error-message" *ngIf="formUsuario.get('Celular')?.hasError(val.type)&&formUsuario.get('Celular')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+              </form>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <ion-button *ngIf="!isModalUpdate" color="success" shape="round" expand="full" (click)="addUser()" [disabled]="!formUsuario.valid">
+                <div>Agregar Usuario</div>
+              </ion-button>
+              <ion-button *ngIf="isModalUpdate" color="primary" shape="round" expand="full" (click)="updateAllUsr()"  [disabled]="!formUsuario.valid">
+                <div>Modificar Usuario</div>
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+  -->
+
+  <ion-modal [isOpen]="admin?.Generated" [backdropDismiss]="false">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Cambiar contraseña generada</ion-title>
+          <form [formGroup]="formPwd">
+            <ion-grid fixed>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-input formControlName="pwd1" type="password" placeholder="Ingresa una contraseña"></ion-input>
+                  <ng-container *ngFor="let val of validationPwdMessages['pwd1']">
+                    <div class="error-message" *ngIf="formPwd.get('pwd1')?.hasError(val.type)&&formPwd.get('pwd1')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-input formControlName="pwd2" type="password" placeholder="Repite la contraseña"></ion-input>
+                  <ng-container *ngFor="let val of validationPwdMessages['pwd2']">
+                    <div class="error-message" *ngIf="formPwd.get('pwd2')?.hasError(val.type)&&formPwd.get('pwd2')?.touched">
+                      {{val.message}}
+                    </div>
+                  </ng-container>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-button (click)="validarPwd()" expand="full" color="success" [disabled]="!formPwd.valid">ACEPTAR</ion-button>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </form>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
 </ion-content>
