--- a/src/app/home-gerente/home-gerente.page.html
+++ b/src/app/home-gerente/home-gerente.page.html
@@ -19,23 +19,12 @@
         <ion-fab>
           <!--(click)="setOpen(true, false)"-->
           <ion-fab-button 
-            
+            (click)="isOpenAndUpdate(true, false)"
             expand="block">
             <ion-icon name="add"></ion-icon>
           </ion-fab-button>
         </ion-fab>
       </ion-col>
-      <!--
-        IdUsuarioOK: string;
-        IdUsuarioBK: string;    Se va a generar 
-        Nombres: string;      
-        Apellidos: string;
-        Hotel: string;
-        Rol: string;
-        Clave: string;
-        CorreoEle: string;
-        Celular: string;
-      -->
 
     </ion-row>
 
@@ -45,6 +34,9 @@
           <div class="contenedor-gerentes" id="contenedor-gerentes-titulo">
             <ion-grid fixed>
               <ion-row>
+                <ion-col size="2">
+                  <p>Encuesta</p>
+                </ion-col>
                 <ion-col size="2">
                   <p>Nombre</p>
                 </ion-col>
@@ -65,15 +57,13 @@
             <ion-item>
               <div class="contenedor-gerentes">
                 <ion-grid fixed>
-                  <ion-row>
-                    
-                  <!--
-                      <ion-chip [color]="getIconActivo(g.Activo).iconColor" outline="true">
-                        <ion-icon [name]="getIconActivo(g.Activo).iconName"></ion-icon>
-                        <ion-label>{{getIconActivo(g.Activo).msj}}</ion-label>
+                  <ion-row>      
+                    <ion-col size="2">
+                      <ion-chip [color]="getEstatusEncuesta(e).iconColor" outline="true">
+                        <ion-icon [name]="getEstatusEncuesta(e).iconName"></ion-icon>
+                        <ion-label>{{getEstatusEncuesta(e).msj}}</ion-label>
                       </ion-chip>
-                    -->
-                    
+                    </ion-col>           
                     <ion-col size="2">
                       <p class="contenedor-gerentes-contenido">{{e.Nombres}}</p>
                     </ion-col>
@@ -91,33 +81,31 @@
               </div>
             </ion-item>
             <!--(ionSwipe)=""-->
-            <ion-item-options 
-              side="start"
-              expandable>
-            <!--
-              <ion-item-option *ngIf="!g.Activo" color="success" (click)="updateUsrActivo(g,true)">
-                <ion-icon name="checkmark"></ion-icon>
-              </ion-item-option>
-              <ion-item-option *ngIf="g.Activo" color="danger" (click)="updateUsrActivo(g,false)">
-                <ion-icon name="close"></ion-icon>
-              </ion-item-option>
-            
-            </ion-item-options>
 
+            <ion-item-options
+            side="start"
+            expandable
+            (click)="enviarEncuesta(e)">
+              <ion-item-option *ngIf="getEstatusEncuesta(e).iconColor === 'danger'" color="primary" >
+                <ion-icon 
+                  name="arrow-redo-outline"></ion-icon>
+              </ion-item-option>
+              
+            </ion-item-options>
+            
             <ion-item-options
               side="end"
               expandable>
              <ion-item-option 
-                color="danger"
-                (click)="deleteUser(g)">
+                color="danger">
                 <ion-icon name="trash"></ion-icon>
               </ion-item-option>
               <ion-item-option 
-                color="primary"
-                (click)="setUpdateOpen(g)">
+              (click)="setPersonaToUpdate(e);isOpenAndUpdate(true, true)"
+                color="primary">
                 <ion-icon name="create"></ion-icon>
               </ion-item-option>
-              -->
+              
             </ion-item-options>
 
           </ion-item-sliding>
@@ -126,7 +114,9 @@
     </ion-row>  
 
   </ion-grid>
-<!--
+
+  <!-- Modal para insertar / Modificar -->
+
   <ion-modal [isOpen]="isModalOpen" [backdropDismiss]="false">
     <ng-template>
       <ion-header>
@@ -134,7 +124,7 @@
           <ion-title *ngIf="!isModalUpdate">Agregar Usuario</ion-title>
           <ion-title *ngIf="isModalUpdate">Modificar {{usrToUpdate?.IdUsuarioBK}}</ion-title>
           <ion-buttons slot="end">
-            <ion-button (click)="setClose()">Close</ion-button>
+            <ion-button (click)="isOpenAndUpdate(false, false)">Close</ion-button>
           </ion-buttons>
         </ion-toolbar>
       </ion-header>
@@ -143,13 +133,13 @@
           <ion-row>
             <ion-col size="12">
 
-              <form [formGroup]="formUsuario">
+              <form [formGroup]="formPersona">
                 <ion-col size="12">
                   <ion-item>
                     <ion-input formControlName="Nombres" type="text" placeholder="NOMBRE"></ion-input>
                   </ion-item>
                   <ng-container *ngFor="let val of validationMessages['Nombres']">
-                    <div class="error-message" *ngIf="formUsuario.get('Nombres')?.hasError(val.type)&&formUsuario.get('Nombres')?.touched">
+                    <div class="error-message" *ngIf="formPersona.get('Nombres')?.hasError(val.type)&&formPersona.get('Nombres')?.touched">
                       {{val.message}}
                     </div>
                   </ng-container>
@@ -160,18 +150,7 @@
                     <ion-input formControlName="Apellidos" type="text" placeholder="APELLIDOS"></ion-input>
                   </ion-item>
                   <ng-container *ngFor="let val of validationMessages['Apellidos']">
-                    <div class="error-message" *ngIf="formUsuario.get('Apellidos')?.hasError(val.type)&&formUsuario.get('Apellidos')?.touched">
-                      {{val.message}}
-                    </div>
-                  </ng-container>
-                </ion-col>
-
-                <ion-col size="12">
-                  <ion-item>
-                    <ion-input formControlName="Hotel" type="text" placeholder="HOTEL"></ion-input>
-                  </ion-item>
-                  <ng-container *ngFor="let val of validationMessages['Hotel']">
-                    <div class="error-message" *ngIf="formUsuario.get('Hotel')?.hasError(val.type)&&formUsuario.get('Hotel')?.touched">
+                    <div class="error-message" *ngIf="formPersona.get('Apellidos')?.hasError(val.type)&&formPersona.get('Apellidos')?.touched">
                       {{val.message}}
                     </div>
                   </ng-container>
@@ -182,7 +161,7 @@
                     <ion-input formControlName="CorreoEle" type="email" placeholder="CORREO ELECTRONICO"></ion-input>
                   </ion-item>
                   <ng-container *ngFor="let val of validationMessages['CorreoEle']">
-                    <div class="error-message" *ngIf="formUsuario.get('CorreoEle')?.hasError(val.type)&&formUsuario.get('CorreoEle')?.touched">
+                    <div class="error-message" *ngIf="formPersona.get('CorreoEle')?.hasError(val.type)&&formPersona.get('CorreoEle')?.touched">
                       {{val.message}}
                     </div>
                   </ng-container>
@@ -193,7 +172,7 @@
                     <ion-input formControlName="Celular" type="text" placeholder="CELULAR"></ion-input>
                   </ion-item>
                   <ng-container *ngFor="let val of validationMessages['Celular']">
-                    <div class="error-message" *ngIf="formUsuario.get('Celular')?.hasError(val.type)&&formUsuario.get('Celular')?.touched">
+                    <div class="error-message" *ngIf="formPersona.get('Celular')?.hasError(val.type)&&formPersona.get('Celular')?.touched">
                       {{val.message}}
                     </div>
                   </ng-container>
@@ -203,11 +182,11 @@
           </ion-row>
           <ion-row>
             <ion-col size="12">
-              <ion-button *ngIf="!isModalUpdate" color="success" shape="round" expand="full" (click)="addUser()" [disabled]="!formUsuario.valid">
-                <div>Agregar Usuario</div>
+              <ion-button *ngIf="!isModalUpdate" (click)="addPersona()" color="success" shape="round" expand="full"  [disabled]="!formPersona.valid">
+                <div>Agregar Persona</div>
               </ion-button>
-              <ion-button *ngIf="isModalUpdate" color="primary" shape="round" expand="full" (click)="updateAllUsr()"  [disabled]="!formUsuario.valid">
-                <div>Modificar Usuario</div>
+              <ion-button *ngIf="isModalUpdate" (click)="updatePersona()" color="primary" shape="round" expand="full"   [disabled]="!formPersona.valid">
+                <div>Modificar Persona</div>
               </ion-button>
             </ion-col>
           </ion-row>
@@ -215,7 +194,8 @@
       </ion-content>
     </ng-template>
   </ion-modal>
-  -->
+
+  <!-- Modal para insertar / Modificar -->
 
   <ion-modal [isOpen]="admin?.Generated" [backdropDismiss]="false">
     <ng-template>
