--- a/src/app/home-gerente/home-gerente.page.html
+++ b/src/app/home-gerente/home-gerente.page.html
@@ -209,7 +209,7 @@
 
   <!-- Modal para insertar / Modificar -->
 
-  <ion-modal [isOpen]="admin?.Generated" [backdropDismiss]="false">
+  <ion-modal [isOpen]="cambiarPWD" [backdropDismiss]="false">
     <ng-template>
       <ion-header>
         <ion-toolbar>
